fix side nav misalignment

--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -6,6 +6,11 @@
   }
 }
 
+.side-links{
+  max-width: 180px;
+  width: 100%;
+}
+
 //post thumbnail
 .post-header{
   .img-fluid{
